raw-manifests/local-staging/monitoring/loki/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: loki-staging-vs
  namespace: istio-system
spec:
  hosts:
    - "loki.staging.local"
  gateways:
    - istio-ingressgateway-staging
  http:
    - route:
        - destination:
            host: mon-loki-staging.monitoring.svc.cluster.local
            port:
              number: 3100
